--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,54 @@
-.App {
-  text-align: center;
+.movie-list{
+  display: flex;
+  flex-wrap: wrap;
+  gap:10px;
+  justify-content: space-around;
+}
+.movie_container{
+  width: 300px;  
+  /* background-color: orange; */
+  
+}
+.poster{
+  height: 500px;
+  width: 100%;
+  object-fit: cover;
+}
+.movie-spec{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movie-name{
+  margin: 0;
+  font-size: 24px;
+}
+.movie-rating{
+  font-size: 18px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.movie-summay{
+  margin-top: 0;
 }
 
+.add-movie-form{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  padding: 24px;
+  font-size: 20px;
+}
+.profile_pic{
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 200px;
+  transition: 0.2s;
+}
+.profile_pic:hover{
+  transform: scale(1.1);
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +71,43 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.movie-detail-container{
+  /* max-width:950px; */
+}
+
+.route-container{
+  padding: 16px;
+}
+
+.board{
+  /* background-color: orange; */
+  display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-template-columns: repeat(3,1fr);
+  min-width: 800px;
+  width:200px;
+  /* background-color: orange; */
+  margin:100px auto;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* justify-items: center; */
+}
+
+.gameBox{
+  height: 160px ;
+  /* width: 160px; */
+  background: white;
+  color: black;
+  font-size: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  cursor: pointer;
+  /* text-decoration: solid; */
+}
+.gameBox:hover{
+  background-color: rgb(249, 244, 244);
 }
